<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">

            <android.support.v7.widget.Toolbar
                android:id="@+id/organizer_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#ff9360"
                app:popupTheme="@style/AppTheme" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="28dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/festName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/festival_name"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/event_name"
                android:textSize="25sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="28dp"
            android:paddingEnd="24dp">

            <EditText
                android:id="@+id/jobName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="23sp"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/jobDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="23sp"
                android:importantForAutofill="no"
                android:hint="@string/description"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/start_date"
                    android:importantForAutofill="no"
                    android:inputType="date" />

                <Button
                    android:id="@+id/startDatebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/start_time"
                    android:importantForAutofill="no"
                    android:inputType="time" />

                <Button
                    android:id="@+id/startTimebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select_time" />
            </LinearLayout>

            <Spinner
                android:id="@+id/spec1"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spec2"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/spec3"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:spinnerMode="dropdown" />


            <Button
                android:id="@+id/org_createJob"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_job" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
