...
            android:layout_height="128dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- E-mail (or Username) Label -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="E-mail or Username"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null" />

        <!-- Password Label -->
        <EditText android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:textColor="#FFFFFF"
                android:backgroundTint="@color/colorAccent"
                android:textCursorDrawable="@null"/>

        <!-- Login Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Login"
...
